--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,18 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "firebase": "^9.6.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-icons": "^4.3.1",
+    "react-material-ui-carousel": "^3.3.3",
+    "react-multi-carousel": "^2.8.0",
+    "react-phone-number-input": "^3.1.49",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-swipeable-views": "^0.14.0",
     "react-tabs": "^4.0.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
