Auth with google navbar done

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@material-ui/core": "^4.12.3",
+    "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styles": "^5.5.3",
